Add stub for config-content

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,7 +9,9 @@
 
     {{content-for "head"}}
     {{content-for "test-head"}}
-
+    <!--- -->
+    {{content-for "config"}}
+    <!--  --> 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/dummy.css">
     <link rel="stylesheet" href="assets/test-support.css">
